--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+body {
+  font-family: 'Merriweather Sans', sans-serif;
+  font-weight: 300;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Merriweather', serif;
+  font-weight: 900;
+  font-style: italic;
+}
+
+
+
 .green {
   background-color: rgb(145, 229, 145);
   border: 3px solid green;
